# youtube-downloader

./: .pre-commit-config.yaml  README.md  main.py  makefile  pyproject.toml  requirements.txt
src/youtube_downloader/: cli.py  core.py
